<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="drawer_list_of_books">List of Books</string>
    <string name="search_book">Search for a book...</string>
    <string name="drawer_add_book">Add a Book</string>
    <string name="drawer_about">About</string>

    <!--FLOATING ACTION BUTTON STRINGS-->
    <string name="add_book">Add a Book</string>
    <string name="scan_book">Scan a Book</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--MENU STRINGS-->
    <string name="action_settings">Settings</string>

    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>

    <!--ADD BOOK-->
    <string name="scan_button">Scan</string>
    <string name="next_button">Next</string>
    <string name="cancel_button">Cancel</string>

    <string name="delete_book">Delete Book</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>

    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.\n\nThe original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
