<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.fragments.ListOfBooks">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchButton"
            android:src="@drawable/ic_action_search"
            android:contentDescription="@string/search"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"/>

        <EditText
            android:layout_width = "fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchText"
            android:inputType="text"
            android:textColor="@color/blue_grey_text_color"
            android:textColorHint="@color/blue_grey_hint_text_color"
            android:hint="@string/search_book"
            android:saveEnabled="true"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_toLeftOf="@+id/searchButton"
            android:layout_toStartOf="@+id/searchButton"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp" />


        <ListView android:id="@+id/listOfBooks"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_alignParentLeft="true"
                  android:layout_marginLeft="0dp"
                  android:layout_below="@+id/searchText"
                  android:layout_alignRight="@id/searchButton"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentStart="true"
                  android:layout_toRightOf="@id/searchButton"/>

    </RelativeLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/list_of_books_fab_menu_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        fab:menu_colorNormal="@color/fab_normal_color"
        fab:menu_colorPressed="@color/fab_pressed_color"
        fab:menu_colorRipple="@color/fab_ripple_color"
        fab:menu_shadowColor="#000"
        fab:menu_icon="@drawable/ic_add_black_24dp"
        fab:menu_animationDelayPerItem="0"
        fab:menu_labels_maxLines="2"
        fab:menu_labels_ellipsize="end"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/list_of_books_fab_add_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            fab:fab_colorNormal="@color/fab_normal_color"
            fab:fab_colorPressed="@color/fab_pressed_color"
            fab:fab_colorRipple="@color/fab_ripple_color"
            fab:fab_shadowColor="#000"
            fab:fab_size="mini"
            fab:fab_label="@string/add_book"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/list_of_books_fab_scan_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            fab:fab_colorNormal="@color/fab_normal_color"
            fab:fab_colorPressed="@color/fab_pressed_color"
            fab:fab_colorRipple="@color/fab_ripple_color"
            fab:fab_shadowColor="#000"
            fab:fab_size="mini"
            fab:fab_label="@string/scan_book"/>

    </com.github.clans.fab.FloatingActionMenu>


</FrameLayout>
