<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.jaschke.alexandria.fragments.AddBook"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_book_fragment_layout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:id="@+id/isbn_input_container"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginTop="4dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minEms="@integer/ean_width"
            android:id="@+id/isbnField"
            android:saveEnabled="true"
            android:maxLength="@integer/ean_size"
            android:maxLines="1"
            android:textColor="@color/blue_grey_text_color"
            android:textColorHint="@color/blue_grey_hint_text_color"
            android:hint="@string/input_hint"
            android:paddingRight="20dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="4dp" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="6dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true"
        android:elevation="8dp"
        android:padding="8dp"
        android:id="@+id/add_book_center_container"
        android:layout_gravity="center"
        android:visibility="invisible">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:id="@+id/add_book_center_subcontainer">

            <ImageView
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:id="@+id/bookCover"
                android:contentDescription="@string/book_cover"
                android:layout_alignTop="@+id/authors"
                android:layout_alignLeft="@+id/eancontainer"
                android:layout_alignStart="@+id/eancontainer"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookTitle"
                android:textSize="@dimen/head_line"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_below="@+id/eancontainer"
                android:layout_alignLeft="@+id/eancontainer"
                android:layout_alignStart="@+id/eancontainer"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookSubTitle"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/bookTitle"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_alignLeft="@+id/eancontainer"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/authors"
                android:gravity="end"
                android:textSize="@dimen/small_fontsize"
                android:layout_below="@+id/bookSubTitle"
                android:layout_alignRight="@+id/eancontainer"
                android:layout_alignEnd="@+id/eancontainer"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categories"
                android:textSize="@dimen/small_fontsize"
                android:layout_below="@+id/bookCover"
                android:layout_alignLeft="@+id/eancontainer"
                android:layout_alignStart="@+id/eancontainer"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:id="@+id/bottom_button_container">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/scan_button"
            android:id="@+id/scan_button"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_weight="1"
            android:typeface="sans" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/next_button"
            android:visibility="gone"
            android:layout_weight="1"
            android:id="@+id/save_button"
            android:drawableLeft="@drawable/ic_action_accept"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="bottom"
            android:typeface="sans"
            android:textSize="14sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel_button"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/delete_button"
            android:drawableLeft="@drawable/ic_action_discard"
            android:visibility="gone"
            android:textSize="14sp"
            android:typeface="sans" />

    </LinearLayout>

</FrameLayout>