<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.fragments.AddBook"
    android:id="@+id/fragment_full_book_layout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/fragment_full_book_container"
        android:layout_gravity="center"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:id="@+id/full_book_scrollview_container"
            android:padding="8dp"
            android:layout_gravity="center"
            android:layout_weight="1">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="6dp"
                card_view:cardPreventCornerOverlap="false"
                card_view:cardUseCompatPadding="true"
                android:elevation="8dp"
                android:padding="8dp"
                android:id="@+id/full_book_cardview_container">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/full_book_subcontainer"
                        android:padding="8dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="128dp"
                            android:layout_height="128dp"
                            android:id="@+id/fullBookCover"
                            android:contentDescription="@string/book_cover"
                            android:layout_marginTop="16dp" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/fullBookTitle"
                            android:textSize="@dimen/head_line"
                            android:textIsSelectable="true"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:typeface="sans"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/fullBookSubTitle"
                            android:maxLines="5"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:typeface="sans"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/authors"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:gravity="end|top"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/fullBookDesc"
                            android:ellipsize="end"
                            android:layout_margin="12dp"
                            android:gravity="start|clip_vertical"
                            android:textColor="@android:color/black"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/categories"
                            android:layout_weight="1"
                            android:textColor="@android:color/black"
                            android:layout_gravity="end"
                            android:gravity="center"
                            android:padding="8dp"
                            android:layout_marginTop="12dp" />

                    </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                </android.support.v7.widget.CardView>

        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_button_container"
            android:layout_marginBottom="6dp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:drawableLeft="@drawable/ic_action_undo"
                android:drawableStart="@drawable/ic_action_undo"
                android:text="@string/back_button"
                android:onClick="goBack"
                android:id="@+id/backButton"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_book"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/delete_button"
                android:drawableLeft="@drawable/ic_action_discard"
                android:drawableStart="@drawable/ic_action_discard"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
